SequencedCollection method can be used