@@ -20,7 +20,7 @@ public class RecipeRepairItem implements IRecipe {
                 list.add(itemstack);
 
                 if (list.size() > 1) {
-                    ItemStack itemstack1 = list.get(0);
+                    ItemStack itemstack1 = list.getFirst();
 
                     if (itemstack.getItem() != itemstack1.getItem() || itemstack1.stackSize != 1 || itemstack.stackSize != 1 || !itemstack1.getItem().isDamageable()) {
                         return false;
@@ -42,7 +42,7 @@ public class RecipeRepairItem implements IRecipe {
                 list.add(itemstack);
 
                 if (list.size() > 1) {
-                    ItemStack itemstack1 = list.get(0);
+                    ItemStack itemstack1 = list.getFirst();
 
                     if (itemstack.getItem() != itemstack1.getItem() || itemstack1.stackSize != 1 || itemstack.stackSize != 1 || !itemstack1.getItem().isDamageable()) {
                         return null;
