@@ -27,12 +27,12 @@ public class StrUtils {
                     list.add("");
                 }
 
-                String s1 = (String) list.get(0);
+                String s1 = (String) list.getFirst();
 
                 if (!startsWithMaskSingle(str, s1, wildCharSingle)) {
                     return false;
                 } else {
-                    String s2 = (String) list.get(list.size() - 1);
+                    String s2 = (String) list.getLast();
 
                     if (!endsWithMaskSingle(str, s2, wildCharSingle)) {
                         return false;
@@ -158,12 +158,12 @@ public class StrUtils {
                     list.add("");
                 }
 
-                String s1 = (String) list.get(0);
+                String s1 = (String) list.getFirst();
 
                 if (!str.startsWith(s1)) {
                     return false;
                 } else {
-                    String s2 = (String) list.get(list.size() - 1);
+                    String s2 = (String) list.getLast();
 
                     if (!str.endsWith(s2)) {
                         return false;
